deploy/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blok45
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: blok45
  template:
    metadata:
      labels:
        app: blok45
    spec:
      volumes:
        - name: wp
          emptyDir: {}
        - name: nginx-conf
          configMap:
            name: blok45-nginx

      containers:
        - name: php-fpm
          image: ghcr.io/antonlukin/blok45:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9000
          volumeMounts:
            - name: wp
              mountPath: /var/www/html

        - name: nginx
          image: nginx:1.27-alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: wp
              mountPath: /var/www/html
            - name: nginx-conf
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf

---
apiVersion: v1
kind: Service
metadata:
  name: blok45
spec:
  selector:
    app: blok45
  ports:
    - name: http
      port: 80
      targetPort: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blok45
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "64m"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - blok45.art
      secretName: blok45-tls
  rules:
    - host: blok45.art
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: blok45
                port:
                  number: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels: { app: redis }
  template:
    metadata:
      labels: { app: redis }
    spec:
      containers:
        - name: redis
          image: redis:7-alpine
          ports:
            - containerPort: 6379

---
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  selector: { app: redis }
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
